--- a/index.html
+++ b/index.html
@@ -17,30 +17,49 @@
     <!-- Navigation Bar -->
     <nav class="navbar max-width-1 m-auto">
         <div class="nav-left">
-            <span>
-                Blog
-            </span>
+            <span class="font-2">Blog</span>
             <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/" class="font-1">Home</a></li>
+                <li><a href="#" class="font-1">About</a></li>
+                <li><a href="/contact.html" class="font-1">Contact</a></li>
             </ul>
         </div>
         <div class="nav-right">
-            <input type="text" class="form-input" placeholder="Article Search">
-            <button class="btn">Search</button>
+            <input type="text" class="form-input font-1" placeholder="Article Search">
+            <button class="btn font-1">Search</button>
         </div>
     </nav>
 
-    <!-- Content -->
-    <div class="content max-width-1 m-auto">
-        <div class="content-left"></div>
-        <div class="content-right"></div>
+    <div class="max-width-1 m-auto">
+        <hr>
     </div>
 
-    <!-- Footer-Copyright -->
-    <div class="footer max-width-2 m-auto">
+    <!-- Content -->
+    <div class="content max-width-2 m-auto">
+        <div class="content-left">
+            <h1 class="font-1">Heaven For Foodies</h1>
+            <p class="font-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet odio ad magni soluta excepturi cupiditate eveniet facere nostrum laboriosam inventore.
+            </p>
+            <p class="font-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Placeat neque sapiente esse praesentium consectetur excepturi! Et tempore laboriosam commodi ad.</p>
+        </div>
+        <div class="content-right">
+            <img src="./Images/People Eating At Restaurant 1.svg" alt="restaurant">
+        </div>
+    </div>
 
+    <div class="max-width-2 m-auto">
+        <hr>
+    </div>
+
+    <div class="home-articles max-width-2 m-auto font-1">
+        <h2 class="font-2">Featured Articles</h2>
+        <div class="home-article">
+
+        </div>
+    </div>
+    <!-- Footer-Copyright -->
+    <div class="footer m-auto">
+        Copyright &copy; sample-blog.com<a href="https://www.vecteezy.com/free-vector/restaurant">Restaurant Vectors by Vecteezy</a>
     </div>
 </body>
 
