--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <!-- Navigation Bar -->
-    <nav class="navbar max-width-1 m-auto">
+    <nav class="navbar max-width-1 m-auto my-2">
         <div class="nav-left">
-            <span class="font-2">Blog</span>
+            <span class="font-2"><a href="/"><img src="/Images/logo.png" alt=""></a></span>
             <ul>
                 <li><a href="/" class="font-1">Home</a></li>
                 <li><a href="#" class="font-1">About</a></li>
@@ -25,8 +25,10 @@
             </ul>
         </div>
         <div class="nav-right">
-            <input type="text" class="form-input font-1" placeholder="Article Search">
-            <button class="btn font-1">Search</button>
+            <form action="/search.html" method="get">
+                <input type="text" class="form-input font-1" name="query" placeholder="Article Search">
+                <button class="btn font-1">Search</button>
+            </form>
         </div>
     </nav>
 
@@ -35,7 +37,7 @@
     </div>
 
     <!-- Content -->
-    <div class="content max-width-2 m-auto">
+    <div class="content max-width-2 m-auto my-2">
         <div class="content-left">
             <h1 class="font-1">Heaven For Foodies</h1>
             <p class="font-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet odio ad magni soluta excepturi cupiditate eveniet facere nostrum laboriosam inventore.
@@ -51,15 +53,93 @@
         <hr>
     </div>
 
-    <div class="home-articles max-width-2 m-auto font-1">
+    <div class="home-articles max-width-3 m-auto font-1">
         <h2 class="font-2">Featured Articles</h2>
         <div class="home-article">
+            <div class="home-article-img">
+                <img src="./Images/1.png" alt="article">
+            </div>
 
+            <div class="home-article-content font-1">
+                <a href="/blogpost.html">
+                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                </a>
+                <span>Author Name</span><br>
+                <span>07 January 6 min read</span>
+            </div>
+        </div>
+
+        <div class="home-article">
+            <div class="home-article-img">
+                <img src="./Images/2.png" alt="article">
+            </div>
+            <div class="home-article-content">
+                <a href="/blogpost.html">
+                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                </a>
+                <span>Author Name</span><br>
+                <span>07 January 6 min read</span>
+            </div>
+        </div>
+
+        <div class="home-article">
+            <div class="home-article-img">
+                <img src="./Images/3.png" alt="arcticle">
+            </div>
+            <div class="home-article-content">
+                <a href="/blogpost.html">
+                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                </a>
+                <span>Author Name</span><br>
+                <span>07 January 6 min read</span>
+            </div>
+        </div>
+
+        <div class="home-article">
+            <div class="home-article-img">
+                <img src="./Images//4.png" alt="arcticle">
+            </div>
+
+            <div class="home-article-content">
+                <a href="/blogpost.html">
+                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                </a>
+                <span>Author Name</span><br>
+                <span>07 January 6 min read</span>
+            </div>
+        </div>
+
+        <div class="home-article">
+            <div class="home-article-img">
+                <img src="./Images/home.svg" alt="arcticle">
+            </div>
+            <div class="home-article-content">
+                <a href="/blogpost.html">
+                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                </a>
+                <span>Author Name</span><br>
+                <span>07 January 6 min read</span>
+            </div>
+        </div>
+
+        <div class="home-article">
+            <div class="home-article-img">
+                <img src="./Images//11.svg" alt="arcticle">
+            </div>
+            <div class="home-article-content">
+                <a href="/blogpost.html">
+                    <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                </a>
+                <span>Author Name</span><br>
+                <span>07 January 6 min read</span>
+            </div>
         </div>
     </div>
     <!-- Footer-Copyright -->
     <div class="footer m-auto">
-        Copyright &copy; sample-blog.com<a href="https://www.vecteezy.com/free-vector/restaurant">Restaurant Vectors by Vecteezy</a>
+        Copyright &copy; sample-blog.com
+        <a href="https://www.vecteezy.com/free-vector/restaurant">Restaurant Vectors by Vecteezy</a>
+        <a href="https://pixabay.com/users/openclipart-vectors-30363/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=154444">OpenClipart-Vectors</a>
     </div>
 </body>
 
