Home page responsive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./CSS/util.css">
     <link rel="stylesheet" href="./CSS/style.css">
-
+    <link rel="stylesheet" href="./CSS/mobile.css">
     <title>Sample Blog</title>
 </head>
 
@@ -64,8 +64,8 @@
                 <a href="/blogpost.html">
                     <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
                 </a>
-                <span>Author Name</span><br>
-                <span>07 January 6 min read</span>
+                <div>Author Name</div>
+                <span>07 January | 6 min read</span>
             </div>
         </div>
 
@@ -77,8 +77,8 @@
                 <a href="/blogpost.html">
                     <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
                 </a>
-                <span>Author Name</span><br>
-                <span>07 January 6 min read</span>
+                <div>Author Name</div>
+                <span>07 January | 6 min read</span>
             </div>
         </div>
 
@@ -90,8 +90,8 @@
                 <a href="/blogpost.html">
                     <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
                 </a>
-                <span>Author Name</span><br>
-                <span>07 January 6 min read</span>
+                <div>Author Name</div>
+                <span>07 January | 6 min read</span>
             </div>
         </div>
 
@@ -104,21 +104,21 @@
                 <a href="/blogpost.html">
                     <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
                 </a>
-                <span>Author Name</span><br>
-                <span>07 January 6 min read</span>
+                <div>Author Name</div>
+                <span>07 January | 6 min read</span>
             </div>
         </div>
 
         <div class="home-article">
             <div class="home-article-img">
-                <img src="./Images/home.svg" alt="arcticle">
+                <img src="./Images/1.png" alt="arcticle">
             </div>
             <div class="home-article-content">
                 <a href="/blogpost.html">
                     <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
                 </a>
-                <span>Author Name</span><br>
-                <span>07 January 6 min read</span>
+                <div>Author Name</div>
+                <span>07 January | 6 min read</span>
             </div>
         </div>
 
@@ -130,8 +130,8 @@
                 <a href="/blogpost.html">
                     <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
                 </a>
-                <span>Author Name</span><br>
-                <span>07 January 6 min read</span>
+                <div>Author Name</div>
+                <span>07 January | 6 min read</span>
             </div>
         </div>
     </div>
