--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./CSS/util.css">
     <link rel="stylesheet" href="./CSS/style.css">
     <link rel="stylesheet" href="./CSS/contact.css">
+    <link rel="stylesheet" href="./CSS/mobile.css">
 
     <title>Sample Blog</title>
 </head>
@@ -18,7 +19,12 @@
     <!-- Navigation Bar -->
     <nav class="navbar max-width-1 m-auto my-2">
         <div class="nav-left">
-            <span class="font-2"><a href="/"><img src="/Images/logo.png" alt=""></a></span>
+            <div class="mobile logo-font">
+                <div class="l"><a href="/">Logo</a></div>
+            </div>
+            <div class="desk">
+                <span class="font-2"><a href="/"><img src="/Images/logo.png" alt=""></a></span>
+            </div>
             <ul>
                 <li><a href="/" class="font-1">Home</a></li>
                 <li><a href="#" class="font-1">About</a></li>
